# gamma-finrl

./: .gitignore  main.py  pyproject.toml
poc/poc-01-baseline/: run.py
poc/poc-02-reward/: run.py
poc/poc-03-gaah/: run.py
poc/poc-04-composite/: run.py
poc/poc-05-optuna/: run.py
src/gamma_finrl/: __init__.py  config.py  env_custom.py  features.py  reward.py
